build_errors_2_utf8.txt
cargo :    Compiling 
exeoutput-studio v1.0.0 
(C:\aserveur\www\exephp\
src-tauri)
Au caractère Ligne:1 : 1
+ cargo build 
--manifest-path 
src-tauri/Cargo.toml > 
build_errors_2.txt ...
+ ~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo      
        : NotSpecified: 
(       Compiling 
ex...ephp\sr    
c-tauri):String) [], R  
  emoteException
    + 
FullyQualifiedErrorI    
d : NativeCommandError
 
warning: unused import: 
`winapi::um::fileapi::Se
tFileAttributesW`
 --> 
src\utils\windows.rs:4:5
  |
4 | use winapi::um::file
api::SetFileAttributesW;
  |     ^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused
_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused import: 
`winapi::um::shellapi::S
HGetFileInfoW`
 --> 
src\utils\windows.rs:5:5
  |
5 | use winapi::um::shel
lapi::SHGetFileInfoW;
  |     ^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^

warning: unused import: 
`winapi::um::winuser::Se
ndMessageW`
 --> 
src\utils\windows.rs:6:5
  |
6 | use winapi::um::winu
ser::SendMessageW;
  |     ^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^

error[E0599]: no method 
named `creation_flags` 
found for mutable 
reference `&mut 
std::process::Command` 
in the current scope
   --> 
src\main.rs:169:38
    |
167 |   ...   let _ = 
Command::new(&mysql_cli)
    |  _______________-
168 | | ...       
.args(&["-u", "root", 
&format!("-P{}", 
db_env_port), "-e", 
&format!("CREATE 
DATABASE IF NOT EXISTS 
`{}`;", db_name)])
169 | | ...       .creat
ion_flags(0x08000000)
    | |           
-^^^^^^^^^^^^^^ method 
not found in `&mut 
std::process::Command`
    | |___________|
    |
    |
    = help: items from 
traits can only be used 
if the trait is in scope
help: trait 
`CommandExt` which 
provides 
`creation_flags` is 
implemented but not in 
scope; perhaps you want 
to import it
    |
  6 + use std::os::windo
ws::process::CommandExt;
    |

error[E0599]: no method 
named `creation_flags` 
found for mutable 
reference `&mut 
std::process::Command` 
in the current scope
   --> 
src\main.rs:179:50
    |
176 |   ...             
      let _ = 
Command::new(&mysql_cli)
    |  _________________
______________-
177 | | ...             
          .args(&["-u", 
"root", 
&format!("-P{}", 
db_env_port), &db_name])
178 | | ...             
          .stdin(std::pr
ocess::Stdio::from(file)
)
179 | | ...             
          .creation_flag
s(0x08000000)
    | |                 
          
-^^^^^^^^^^^^^^ method 
not found in `&mut 
std::process::Command`
    | |_________________
__________|
    |
    |
    = help: items from 
traits can only be used 
if the trait is in scope
help: trait 
`CommandExt` which 
provides 
`creation_flags` is 
implemented but not in 
scope; perhaps you want 
to import it
    |
  6 + use std::os::windo
ws::process::CommandExt;
    |

warning: unused 
variable: `path`
  --> src\utils\windows.
rs:19:24
   |
19 | pub fn 
set_file_hidden(path: 
&Path) -> Result<()> {
   |                    
    ^^^^ help: if this 
is intentional, prefix 
it with an underscore: 
`_path`
   |
   = note: `#[warn(unuse
d_variables)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
variable: `target`
  --> src\utils\windows.
rs:24:24
   |
24 | pub fn 
create_shortcut(target: 
&Path, link_path: 
&Path) -> Result<()> {
   |                    
    ^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: `_target`

warning: unused 
variable: `link_path`
  --> src\utils\windows.
rs:24:39
   |
24 | pub fn 
create_shortcut(target: 
&Path, link_path: 
&Path) -> Result<()> {
   |                    
                   
^^^^^^^^^ help: if this 
is intentional, prefix 
it with an underscore: 
`_link_path`

warning: unused 
variable: `exe_path`
  --> src\runtime\genera
tor.rs:35:35
   |
35 |     pub fn 
sign_executable(&self, 
exe_path: &Path) -> 
Result<()> {
   |                    
               ^^^^^^^^ 
help: if this is 
intentional, prefix it 
with an underscore: 
`_exe_path`

warning: unused 
variable: `name`
  --> src\main.rs:47:49
   |
47 | async fn 
compile_project(window: 
tauri::Window, name: 
String, source: String, 
output: String, 
entry_point: String, 
public_dir: Strin...
   |                    
                        
     ^^^^ help: if this 
is intentional, prefix 
it with an underscore: 
`_name`

For more information 
about this error, try 
`rustc --explain E0599`.
warning: 
`exeoutput-studio` (bin 
"exeoutput-studio") 
generated 8 warnings
error: could not 
compile 
`exeoutput-studio` (bin 
"exeoutput-studio") due 
to 2 previous errors; 8 
warnings emitted
